--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "fitness-tracker",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://https://github.com/brownjessa/FitnessTracker.git"
+    "start": "node server.js",
+    "watch": "nodemon server.js",
+    "seed": "node seeders/seed.js"
   },
   "author": "Jessamine Brown",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "mongoose": "^5.3.16",
+    "express": "^4.17.1",
+    "mongoose": "^5.8.10",
     "morgan": "^1.9.1"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
